--- a/.github/workflows/Run.yml
+++ b/.github/workflows/Run.yml
@@ -1,1 +1,18 @@
-name: Node.js CI  on: push: branches: [ main ] pull_request: branches: [ main ]  jobs: build:   runs-on: ubuntu-latest  strategy:   matrix:     node-version: [20.x]     # See supported Node.js release schedule at https://nodejs.org/en/about/releases/  steps: - uses: actions/checkout@v2 - name: Use Node.js ${{ matrix.node-version }}   uses: actions/setup-node@v2   with:     node-version: ${{ matrix.node-version }}     cache: 'npm' - run: npm install - run: npm start
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+on: [push]
+jobs:
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This 
