--- a/config.json
+++ b/config.json
@@ -17,15 +17,15 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "",
+    "100088249106822",
   ],
   "whiteListMode": {
     "enable": false,
     "whiteListIds": [],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "✦⎝{+} 𝐋𝐕𝟐 ☬ 𝐌𝐀𝐓𝐄𝐎 𝐂𝐎𝐍𝐒𝐓 𝐁𝐎𝐓⎠✪࿐"
-  "prefix": "+",
+  "nickNameBot": "【" ! "】𝐋𝐯𝟐°•➣𝐠𝐞𝐫𝐚𝐥𝐝✮𝐛𝐨𝐭❉࿐࿐"
+  "prefix": "!",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
